samples/_failures_safe/1761597763_49d8da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3a5dff0.c: In function ‘main’:
./samples/SAFE/__tmp_c3a5dff0.c:159:5: error: expected declaration or statement at end of input
  159 |     printf("Enter expression to tokenize: ");
      |     ^~~~~~
